set(SMALL_TEST testrun)
set(TARGET ${SMALL_TEST})
set(SMALL_TEST_SRC 
    temporary_test.cpp)
add_executable(${SMALL_TEST} ${SMALL_TEST_SRC})
target_link_libraries(${SMALL_TEST} mpi )
if(NOT DOC_ONLY)
    DEAL_II_SETUP_TARGET(${SMALL_TEST})
endif()
message("Adding executable " ${SMALL_TEST} " with files " ${SMALL_TEST_SRC} "\n")
unset(SMALL_TEST)
unset(TARGET ${SMALL_TEST})

#set(SMALL_TEST instantiate_vector_ad)
#set(TARGET ${SMALL_TEST})
#set(SMALL_TEST_SRC 
#    instantiate_vector_ad.cpp)
#add_executable(${SMALL_TEST} ${SMALL_TEST_SRC})
#target_link_libraries(${SMALL_TEST} mpi )
#if(NOT DOC_ONLY)
#    DEAL_II_SETUP_TARGET(${SMALL_TEST})
#endif()
#message("Adding executable " ${SMALL_TEST} " with files " ${SMALL_TEST_SRC} "\n")
#unset(SMALL_TEST)
#unset(TARGET ${SMALL_TEST})

set(SMALL_TEST manifoldrun)
set(TARGET ${SMALL_TEST})
set(SMALL_TEST_SRC 
    test_manifold.cpp)

add_executable(${SMALL_TEST} ${SMALL_TEST_SRC})
#    target_link_libraries(${SMALL_TEST} m mpi)

if(NOT DOC_ONLY)
    DEAL_II_SETUP_TARGET(${SMALL_TEST})
endif()
message("Adding executable " ${SMALL_TEST} " with files " ${SMALL_TEST_SRC} "\n")

unset(SMALL_TEST)
unset(TARGET ${SMALL_TEST})

set(SMALL_TEST diff1)
set(TARGET ${SMALL_TEST})
set(SMALL_TEST_SRC 
    trad_example.cpp)
add_executable(${SMALL_TEST} ${SMALL_TEST_SRC})
target_link_libraries(${SMALL_TEST} mpi )
if(NOT DOC_ONLY)
    DEAL_II_SETUP_TARGET(${SMALL_TEST})
endif()
message("Adding executable " ${SMALL_TEST} " with files " ${SMALL_TEST_SRC} "\n")
unset(SMALL_TEST)
unset(TARGET ${SMALL_TEST})

set(SMALL_TEST diff2)
set(TARGET ${SMALL_TEST})
set(SMALL_TEST_SRC 
    dfad_dfad_example.cpp)
add_executable(${SMALL_TEST} ${SMALL_TEST_SRC})
target_link_libraries(${SMALL_TEST} mpi )
if(NOT DOC_ONLY)
    DEAL_II_SETUP_TARGET(${SMALL_TEST})
endif()
message("Adding executable " ${SMALL_TEST} " with files " ${SMALL_TEST_SRC} "\n")
unset(SMALL_TEST)
unset(TARGET ${SMALL_TEST})

set(SMALL_TEST diff3)
set(TARGET ${SMALL_TEST})
set(SMALL_TEST_SRC 
    trad_dfad_example_3.cpp)
add_executable(${SMALL_TEST} ${SMALL_TEST_SRC})
target_compile_definitions(${SMALL_TEST} PRIVATE RAD_DEBUG_FILE=1)
target_compile_definitions(${SMALL_TEST} PRIVATE RAD_DEBUG_BLOCKKEEP=2000)
target_compile_definitions(${SMALL_TEST} PRIVATE RAD_DEBUG=1)
target_compile_definitions(${SMALL_TEST} PRIVATE RAD_REINIT=0)
target_compile_definitions(${SMALL_TEST} PRIVATE RAD_DISALLOW_WANTDERIV=0)
target_link_libraries(${SMALL_TEST} mpi )
#target_include_directories(diff3 PUBLIC /home/ddong/Libraries/Trilinos/install/include)
if(NOT DOC_ONLY)
    DEAL_II_SETUP_TARGET(${SMALL_TEST})
endif()
message("Adding executable " ${SMALL_TEST} " with files " ${SMALL_TEST_SRC} "\n")
unset(SMALL_TEST)
unset(TARGET ${SMALL_TEST})

set(SMALL_TEST codipack_vector_rad_fad)
set(TARGET ${SMALL_TEST})
set(SMALL_TEST_SRC 
    codipack_vector_rad_fad_3.cpp)
#set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DCODI_UseForcedInlines")
add_executable(${SMALL_TEST} ${SMALL_TEST_SRC})
target_link_libraries(${SMALL_TEST} open-pal)
#if(NOT DOC_ONLY)
#    DEAL_II_SETUP_TARGET(${SMALL_TEST})
#endif()
message("Adding executable " ${SMALL_TEST} " with files " ${SMALL_TEST_SRC} "\n")
unset(SMALL_TEST)
unset(TARGET ${SMALL_TEST})

set(SMALL_TEST diff4)
set(TARGET ${SMALL_TEST})
set(SMALL_TEST_SRC 
    dfad_example.cpp)
add_executable(${SMALL_TEST} ${SMALL_TEST_SRC})
target_link_libraries(${SMALL_TEST} mpi )
if(NOT DOC_ONLY)
    DEAL_II_SETUP_TARGET(${SMALL_TEST})
endif()
message("Adding executable " ${SMALL_TEST} " with files " ${SMALL_TEST_SRC} "\n")
unset(SMALL_TEST)
unset(TARGET ${SMALL_TEST})

set(SMALL_TEST diff5)
set(TARGET ${SMALL_TEST})
set(SMALL_TEST_SRC 
    jacobian_via_dfad_example.cpp)
add_executable(${SMALL_TEST} ${SMALL_TEST_SRC})
target_link_libraries(${SMALL_TEST} mpi )
if(NOT DOC_ONLY)
    DEAL_II_SETUP_TARGET(${SMALL_TEST})
endif()
message("Adding executable " ${SMALL_TEST} " with files " ${SMALL_TEST_SRC} "\n")
unset(SMALL_TEST)
unset(TARGET ${SMALL_TEST})

# Need to turn warning off to compile this.
# set(SMALL_TEST quasi-static)
# set(TARGET ${SMALL_TEST})
# set(SMALL_TEST_SRC 
#     quasi-static.cpp)
# add_executable(${SMALL_TEST} ${SMALL_TEST_SRC})
# target_link_libraries(${SMALL_TEST} mpi )
# if(NOT DOC_ONLY)
#     DEAL_II_SETUP_TARGET(${SMALL_TEST})
# endif()
# message("Adding executable " ${SMALL_TEST} " with files " ${SMALL_TEST_SRC} "\n")
# unset(SMALL_TEST)
# unset(TARGET ${SMALL_TEST})
